--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 2.0.0
   - 2.1.2
-script: bundle exec rake
+script: bundle exec rake --trace
 before_install:
   - gem update --system
 services:
